[gd_scene load_steps=121 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://SFPixelate.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://baking.png" type="Texture" id=3]
[ext_resource path="res://textbox1.png" type="Texture" id=4]
[ext_resource path="res://livingroom.png" type="Texture" id=5]
[ext_resource path="res://Sugar.png" type="Texture" id=6]
[ext_resource path="res://kitchen.png" type="Texture" id=7]
[ext_resource path="res://Milk.png" type="Texture" id=8]
[ext_resource path="res://startingroom.png" type="Texture" id=9]
[ext_resource path="res://dining room.png" type="Texture" id=10]
[ext_resource path="res://Egg.png" type="Texture" id=11]
[ext_resource path="res://bedroom.png" type="Texture" id=12]
[ext_resource path="res://Strawberry.png" type="Texture" id=13]
[ext_resource path="res://garden.png" type="Texture" id=14]
[ext_resource path="res://Wheat.png" type="Texture" id=15]
[ext_resource path="res://Girl.gd" type="Script" id=16]
[ext_resource path="res://betty.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 366.298, 18.6684 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 387.716, 10.3098 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.752, 149.7 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1080, 1080 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 0, 1080, 1080 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2160, 0, 1080, 1080 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3240, 0, 1080, 1080 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4320, 0, 1080, 1080 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5400, 0, 1080, 1080 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1080, 1080, 1080 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 1080, 1080, 1080 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2160, 1080, 1080, 1080 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3240, 1080, 1080, 1080 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4320, 1080, 1080, 1080 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5400, 1080, 1080, 1080 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2160, 1080, 1080 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 2160, 1080, 1080 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2160, 2160, 1080, 1080 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3240, 2160, 1080, 1080 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4320, 2160, 1080, 1080 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5400, 2160, 1080, 1080 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3240, 1080, 1080 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 3240, 1080, 1080 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2160, 3240, 1080, 1080 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3240, 3240, 1080, 1080 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4320, 3240, 1080, 1080 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5400, 3240, 1080, 1080 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 4320, 1080, 1080 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 4320, 1080, 1080 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2160, 4320, 1080, 1080 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3240, 4320, 1080, 1080 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4320, 4320, 1080, 1080 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 5400, 4320, 1080, 1080 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 5400, 1080, 1080 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 5400, 1080, 1080 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2160, 5400, 1080, 1080 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3240, 5400, 1080, 1080 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "baking",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 1.63913, 10 )

[sub_resource type="DynamicFont" id=43]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=44]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 108, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 108, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 216, 108, 108 )

[sub_resource type="SpriteFrames" id=50]
animations = [ {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "sugar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 33.4871, 47.1011 )

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 55.9634, 126.004 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 108, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 108, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 216, 108, 108 )

[sub_resource type="SpriteFrames" id=58]
animations = [ {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "milk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=59]
extents = Vector2( 33.1397, 41.5311 )

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 75.73, 123.493 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 108, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 108, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 216, 108, 108 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "egg",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=67]
radius = 29.5228

[sub_resource type="RectangleShape2D" id=68]
extents = Vector2( 64.7422, 108.45 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 108, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 108, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 216, 108, 108 )

[sub_resource type="SpriteFrames" id=74]
animations = [ {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "strawberry",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=75]
radius = 30.8455
height = 0.0

[sub_resource type="RectangleShape2D" id=76]
extents = Vector2( 59.5241, 97.7309 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 108, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 108, 108, 108, 108 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 216, 108, 108 )

[sub_resource type="SpriteFrames" id=82]
animations = [ {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": true,
"name": "wheat",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=83]
extents = Vector2( 44.1148, 46.9368 )

[sub_resource type="RectangleShape2D" id=84]
extents = Vector2( 57.2395, 134.39 )

[sub_resource type="RectangleShape2D" id=85]
extents = Vector2( 89.044, 159.894 )

[sub_resource type="RectangleShape2D" id=86]
extents = Vector2( 19.1805, 239.827 )

[sub_resource type="RectangleShape2D" id=87]
extents = Vector2( 66.0735, 17.2681 )

[sub_resource type="Animation" id=88]
length = 0.823
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 14, 15, 16, 10 ]
}

[sub_resource type="Animation" id=89]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=90]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=91]
length = 0.894
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=92]
length = 0.891
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 21, 22, 23, 24, 25 ]
}

[sub_resource type="AnimationNodeAnimation" id=93]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=94]
animation = "left"

[sub_resource type="AnimationNodeAnimation" id=95]
animation = "right"

[sub_resource type="AnimationNodeAnimation" id=96]
animation = "up"

[sub_resource type="AnimationNodeAnimation" id=97]
animation = "down"

[sub_resource type="AnimationNodeBlendSpace2D" id=98]
blend_point_0/node = SubResource( 94 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 95 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 96 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 97 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=99]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=100]

[sub_resource type="AnimationNodeStateMachine" id=101]
states/idle/node = SubResource( 93 )
states/idle/position = Vector2( 543, 63 )
states/walk/node = SubResource( 98 )
states/walk/position = Vector2( 811, 63 )
transitions = [ "walk", "idle", SubResource( 99 ), "idle", "walk", SubResource( 100 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=102]

[sub_resource type="RectangleShape2D" id=103]
extents = Vector2( 66.1415, 138.777 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 842.0
margin_bottom = 1019.0
color = Color( 1, 0.756863, 0.576471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Floor" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 424.593, 451.052 )
shape = SubResource( 1 )

[node name="bottom" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 415.774, 714.375 )
shape = SubResource( 2 )

[node name="leftwall" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 47.5741, 557.224 )
shape = SubResource( 3 )

[node name="rightwall" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 796.49, 556.824 )
shape = SubResource( 3 )

[node name="TitleScreen" type="Node2D" parent="."]

[node name="UI" type="Control" parent="TitleScreen"]
margin_right = 839.0
margin_bottom = 1021.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleScreen/UI"]
margin_left = 55.0
margin_top = 169.0
margin_right = 809.0
margin_bottom = 388.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.996078, 0.529412, 0.301961, 1 )
text = "a cakey situation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="TitleScreen/UI"]
modulate = Color( 1, 0.988281, 0.988281, 1 )
margin_left = 304.976
margin_top = 260.492
margin_right = 526.976
margin_bottom = 336.492
custom_styles/hover = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.709804, 0.513726, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.466667, 0.219608, 1 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Node2D" parent="."]

[node name="UI" type="Control" parent="Play"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Baking" type="KinematicBody2D" parent="Play/UI"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Play/UI/Baking"]
position = Vector2( 421.954, 372.953 )
scale = Vector2( 0.668689, 0.618172 )
frames = SubResource( 41 )
animation = "baking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Baking"]
shape = SubResource( 42 )

[node name="Textbox" type="Sprite" parent="Play/UI"]
position = Vector2( 406.939, 890.114 )
scale = Vector2( 0.766021, 0.711283 )
texture = ExtResource( 4 )

[node name="story1" type="Label" parent="Play/UI/Textbox"]
visible = false
margin_left = -264.172
margin_top = -175.968
margin_right = 287.828
margin_bottom = -88.968
custom_fonts/font = SubResource( 43 )
custom_colors/font_color = Color( 1, 0.462745, 0.254902, 1 )
text = "November the 26th, 2021

National cake day"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="story2" type="Label" parent="Play/UI/Textbox"]
visible = false
margin_left = -260.705
margin_top = -177.356
margin_right = 291.295
margin_bottom = 29.6437
custom_fonts/font = SubResource( 43 )
custom_colors/font_color = Color( 1, 0.462745, 0.254902, 1 )
text = "Betty is excited. She has been planning to celebrate this day with a perfect cake. 
But, she's been so busy that she forgot where her ingredients went! "
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="story3" type="Label" parent="Play/UI/Textbox"]
visible = false
margin_left = -262.692
margin_top = -145.385
margin_right = 289.308
margin_bottom = -58.3844
custom_fonts/font = SubResource( 43 )
custom_colors/font_color = Color( 1, 0.462745, 0.254902, 1 )
text = "Help Betty find her ingredients around her house "
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="story4" type="Label" parent="Play/UI/Textbox"]
margin_left = -258.78
margin_top = -114.841
margin_right = 293.22
margin_bottom = -27.8404
custom_fonts/font = SubResource( 43 )
custom_colors/font_color = Color( 1, 0.462745, 0.254902, 1 )
text = "Press E to pick up items
You may need to spam the E button multiple times
"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end1" type="Label" parent="Play/UI/Textbox"]
visible = false
margin_left = -250.716
margin_top = -145.227
margin_right = 299.284
margin_bottom = -58.2268
custom_fonts/font = SubResource( 43 )
custom_colors/font_color = Color( 1, 0.462745, 0.254902, 1 )
text = "With your help, Betty was able to find her ingredients to bake her cake! "
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end2" type="Label" parent="Play/UI/Textbox"]
visible = false
margin_left = -228.56
margin_top = -137.585
margin_right = 321.44
margin_bottom = -50.5852
custom_fonts/font = SubResource( 43 )
custom_colors/font_color = Color( 1, 0.462745, 0.254902, 1 )
text = "Play again?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="Play/UI/Textbox"]
margin_left = -253.177
margin_top = -50.7729
margin_right = -17.1771
margin_bottom = 29.2271
custom_fonts/font = SubResource( 44 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 0.52549, 0.333333, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Play/UI/Textbox"]
margin_left = 106.532
margin_top = -51.8639
margin_right = 342.532
margin_bottom = 28.1361
custom_fonts/font = SubResource( 44 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 0.52549, 0.333333, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Livingroom" type="Sprite" parent="Play/UI"]
position = Vector2( 423.532, 372.888 )
scale = Vector2( 0.667369, 0.616166 )
texture = ExtResource( 5 )

[node name="Sugar" type="KinematicBody2D" parent="Play/UI"]
position = Vector2( 544.286, 292.302 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Play/UI/Sugar"]
frames = SubResource( 50 )
animation = "sugar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Sugar"]
shape = SubResource( 51 )

[node name="sugararea" type="Area2D" parent="Play/UI/Sugar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Sugar/sugararea"]
position = Vector2( 1.05945, 82.1084 )
shape = SubResource( 52 )

[node name="Kitchen" type="Sprite" parent="Play/UI"]
visible = false
position = Vector2( 423.322, 374.23 )
scale = Vector2( 0.667698, 0.616288 )
texture = ExtResource( 7 )

[node name="Milk" type="KinematicBody2D" parent="Play/UI"]
position = Vector2( 269.27, 302.993 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Play/UI/Milk"]
frames = SubResource( 58 )
animation = "milk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Milk"]
shape = SubResource( 59 )

[node name="milkarea" type="Area2D" parent="Play/UI/Milk"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Milk/milkarea"]
position = Vector2( -0.529724, 61.4489 )
shape = SubResource( 60 )

[node name="Screen" type="Sprite" parent="Play/UI"]
position = Vector2( 423.494, 374.156 )
scale = Vector2( 0.667274, 0.616149 )
texture = ExtResource( 9 )

[node name="Diningroom" type="Sprite" parent="Play/UI"]
visible = false
position = Vector2( 423.494, 374.156 )
scale = Vector2( 0.667274, 0.616149 )
texture = ExtResource( 10 )

[node name="Egg" type="KinematicBody2D" parent="Play/UI"]
visible = false
position = Vector2( 257.387, 336.583 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Play/UI/Egg"]
frames = SubResource( 66 )
animation = "egg"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Egg"]
shape = SubResource( 67 )

[node name="eggarea" type="Area2D" parent="Play/UI/Egg"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Egg/eggarea"]
position = Vector2( -1.05945, 60.3894 )
shape = SubResource( 68 )

[node name="Bedroom" type="Sprite" parent="Play/UI"]
visible = false
position = Vector2( 423.494, 374.156 )
scale = Vector2( 0.667274, 0.616149 )
texture = ExtResource( 12 )

[node name="Strawberry" type="KinematicBody2D" parent="Play/UI"]
visible = false
position = Vector2( 557.864, 347.963 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Play/UI/Strawberry"]
frames = SubResource( 74 )
animation = "strawberry"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Strawberry"]
position = Vector2( -3.57381, -5.46583 )
shape = SubResource( 75 )

[node name="strawberryarea" type="Area2D" parent="Play/UI/Strawberry"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Strawberry/strawberryarea"]
position = Vector2( -2.77795, 42.463 )
shape = SubResource( 76 )

[node name="Garden" type="Sprite" parent="Play/UI"]
visible = false
position = Vector2( 423.494, 374.156 )
scale = Vector2( 0.667274, 0.616149 )
texture = ExtResource( 14 )

[node name="Wheat" type="KinematicBody2D" parent="Play/UI"]
position = Vector2( 661.143, 416.714 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Play/UI/Wheat"]
frames = SubResource( 82 )
animation = "wheat"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Wheat"]
position = Vector2( 4.48985, 1.68369 )
shape = SubResource( 83 )

[node name="wheatarea" type="Area2D" parent="Play/UI/Wheat"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/UI/Wheat/wheatarea"]
shape = SubResource( 84 )

[node name="Outside" type="Area2D" parent="Play"]
position = Vector2( 3, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/Outside"]
position = Vector2( 439.956, 307.267 )
shape = SubResource( 85 )

[node name="Rightwall" type="Area2D" parent="Play"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/Rightwall"]
position = Vector2( 765, 430 )
shape = SubResource( 86 )

[node name="Leftwall" type="Area2D" parent="Play"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/Leftwall"]
position = Vector2( 80, 430 )
shape = SubResource( 86 )

[node name="Girl" type="KinematicBody2D" parent="Play"]
position = Vector2( 294.599, 391.903 )
script = ExtResource( 16 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Play/Girl"]
position = Vector2( 2.45972, 142.97 )
shape = SubResource( 87 )

[node name="Sprite" type="Sprite" parent="Play/Girl"]
position = Vector2( 17.884, 12.1986 )
scale = Vector2( 0.630925, 0.64719 )
texture = ExtResource( 17 )
vframes = 6
hframes = 5
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Play/Girl"]
anims/down = SubResource( 88 )
anims/idle = SubResource( 89 )
anims/left = SubResource( 90 )
anims/right = SubResource( 91 )
anims/up = SubResource( 92 )

[node name="AnimationTree" type="AnimationTree" parent="Play/Girl"]
tree_root = SubResource( 101 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 102 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="PickupBox" type="Area2D" parent="Play/Girl"]
position = Vector2( -294.599, -391.903 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/Girl/PickupBox"]
position = Vector2( 299.848, 414.485 )
shape = SubResource( 103 )

[node name="Storytimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Storytimer2" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Storytimer3" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Endtimer1" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
[connection signal="button_down" from="TitleScreen/UI/Start" to="." method="_on_starting_button_down"]
[connection signal="button_down" from="Play/UI/Textbox/restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="Play/UI/Textbox/quit" to="." method="_on_quit_button_down"]
[connection signal="body_entered" from="Play/UI/Sugar/sugararea" to="." method="_on_sugararea_body_entered"]
[connection signal="body_entered" from="Play/UI/Milk/milkarea" to="." method="_on_milkarea_body_entered"]
[connection signal="body_entered" from="Play/UI/Egg/eggarea" to="." method="_on_eggarea_body_entered"]
[connection signal="body_entered" from="Play/UI/Strawberry/strawberryarea" to="." method="_on_strawberryarea_body_entered"]
[connection signal="body_entered" from="Play/UI/Wheat/wheatarea" to="." method="_on_wheatarea_body_entered"]
[connection signal="body_entered" from="Play/Outside" to="." method="_on_Outside_body_entered"]
[connection signal="body_entered" from="Play/Rightwall" to="." method="_on_Rightwall_body_entered"]
[connection signal="body_entered" from="Play/Leftwall" to="." method="_on_Leftwall_body_entered"]
